<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <POU Name="init_Bch" Id="{dc1ae0ea-a78e-4c30-b44d-dae2e7ab3781}">
    <Declaration><![CDATA[FUNCTION init_Bch : BOOL
VAR_INPUT
	pBch: POINTER TO T_BCH;
	/// instance array of all controller instances
	pCtrlInst: POINTER TO fb_CtrlBase;
	/// common interface array of all controllers (main use for PLC)
	pCtrlCIf: POINTER TO T_Ctrl_CIf;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[pBch^.datachn.rSendData.fbDataChannel.InitChannel(SIZEOF(pBch^.datachn.rSendData.rDataChannelItem), ADR(pBch^.datachn.rSendData.rDataChannelItem));
pBch^.datachn.rSendData.fbFifo.DataChannel := ADR(pBch^.datachn.rSendData.fbDataChannel);
pBch^.datachn.rSendData.fbFifo.FreeDataPointer := TRUE;
pBch^.datachn.rSendData.fbFifo.Enable := TRUE;

pBch^.ctrl.fbBch_Bcc.iniAllCtrlArrays(pCtrlInst,pCtrlCIf,pBch^.id.Bch_Bcc); // init and entry fb_instance in global fb pointer array
pBch^.ctrl.fbBch_Bcc.pBCD_SIf_In := pBch^.ctrl.fbBch_Bcc_Bcd.getSIf();
pBch^.ctrl.fbBch.iniAllCtrlArrays(pCtrlInst,pCtrlCIf,pBch^.id.Bch); // init and entry fb_instance in global fb pointer array
pBch^.ctrl.fbBch.BarcodeReader := ADR(pBch^.ctrl.fbBch_Bcc);
pBch^.ctrl.fbBch.DataChannel := ADR(pBch^.datachn.rSendData.fbFifo);]]></ST>
    </Implementation>
    <ObjectProperties />
  </POU>
</TcPlcObject>